--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @import "reset.css";
 body{
-    background-color: $f6f9fc;
+    background-color: #f6f9fc;
     display: flex;
     flex-direction: column;
     align-items: center;
