--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,11 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 50px
+    padding: 0px 50px;
 }
 
 
-.canvas{
+.canvas {
     width: 700px;
     height: 700px;
     background-color: white;
@@ -16,17 +16,50 @@ body{
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0,0,0,1);
 }
 
-.controls{
+.controls {
     margin-top: 80px;
-}
-.controls .controls_colors{
     display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.controls_colors .controls_color{
+.controls .controls__btns {
+    margin-bottom: 30px;
+}
+
+.controls__btns button { /**색칠하기 저장 버튼**/
+    all: unset;
+    cursor: pointer;
+    background-color: white;
+    padding: 5px 0px;
+    width: 80px;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0,0,0,1);
+    border:2px solid rgba(0, 0, 0, 0.2);
+    color: rgba(0, 0, 0, 0.7);
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 12px;
+
+}
+
+.controls__btns button:active {
+    transform: scale(0.98);
+}
+
+.controls .controls_colors{ /**색칠팔레트버튼**/
+    display: flex; /**세로친구들이 가로로 정렬**/
+}
+
+.controls_colors .controls_color {
     width:50px;
     height:50px;
     border-radius:25px;
     cursor:pointer;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0,0,0,1);
+}
+
+.controls .controls__range { /**붓크기수정 마진**/
+    margin-bottom: 30px;
 }
